// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InspectedElementContext should inspect the currently selected element: 1: Initial inspection 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "hooks": null,
  "props": {
    "a": 1,
    "b": "abc"
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should not dehydrate nested values until explicitly requested: 1: Initially inspect element 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "hooks": null,
  "props": {
    "nestedObject": {
      "a": {}
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should not dehydrate nested values until explicitly requested: 2: Inspect props.nestedObject.a 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "hooks": null,
  "props": {
    "nestedObject": {
      "a": {
        "b": {
          "c": {}
        }
      }
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should not dehydrate nested values until explicitly requested: 3: Inspect props.nestedObject.a.b.c 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "hooks": null,
  "props": {
    "nestedObject": {
      "a": {
        "b": {
          "c": [
            {
              "d": {}
            }
          ]
        }
      }
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should not dehydrate nested values until explicitly requested: 4: Inspect props.nestedObject.a.b.c.0.d 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "hooks": null,
  "props": {
    "nestedObject": {
      "a": {
        "b": {
          "c": [
            {
              "d": {
                "e": {}
              }
            }
          ]
        }
      }
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should support complex data types: 1: Initial inspection 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "hooks": null,
  "props": {
    "array_buffer": {},
    "date": {},
    "fn": {},
    "html_element": {},
    "immutable": {
      "0": {},
      "1": {},
      "2": {}
    },
    "map": {
      "0": {},
      "1": {}
    },
    "map_of_maps": {
      "0": {},
      "1": {}
    },
    "react_element": {},
    "set": {
      "0": "abc",
      "1": 123
    },
    "set_of_sets": {
      "0": {},
      "1": {}
    },
    "symbol": {},
    "typed_array": {
      "0": 100,
      "1": -100,
      "2": 0
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should support custom objects with enumerable properties and getters: 1: Initial inspection 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "hooks": null,
  "props": {
    "data": {
      "_number": 42,
      "number": 42
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should support simple data types: 1: Initial inspection 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "hooks": null,
  "props": {
    "boolean_false": false,
    "boolean_true": true,
    "infinity": null,
    "integer_zero": 0,
    "integer_one": 1,
    "float": 1.23,
    "string": "abc",
    "string_empty": "",
    "nan": null,
    "value_null": null
  },
  "state": null
},
}
`;
